crates/pcbc/tests/snapshots/build__suppressed_with_deny_flag.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen -Dwarnings
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 errors
✓ test.zen (0 components)
