crates/pcbc/tests/snapshots/build__unstable_ref_no_explicit_branch.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (1 components)
