crates/pcbc/tests/snapshots/build__unstable_ref_wrong_tag.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (0 components)
