crates/pcbc/tests/snapshots/build__unused_module_io_warning.snap
---
source: crates/pcb/tests/build.rs
assertion_line: 601
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: io() 'SPARE' in module 'WRAP' is not connected to any ports
   ╭─[ <TEMP_DIR>/Wrapper.zen:5:9 ]
 5 │SPARE = io(Net)
   │           ╰──── io() 'SPARE' in module 'WRAP' is not connected to any ports

✓ board.zen (1 components)
